# reactive-banana

./: .gitignore  .travis.yml  CONTRIBUTORS  ExampleIdeas.md  LICENSE  Makefile  README.md  cabal.project
.github/workflows/: ci.yaml
BlackBoard/: .gitignore  Blackboard.cabal
BlackBoard/src/: GUITest.hs  ToolPickers.hs
BlackBoard/src/Reactive/: GraphicOpt.hs
doc/: haddock.html  snippets.md
haste/: Makefile
haste/CurrencyConverter/: CurrencyConverter.hs  CurrencyConverter.html
haste/libraries/: .gitignore
haste/libraries/base/Data/: Unique.hs
haste/libraries/unordered-containers/Data/: HashSet.hs  Hashable.hs
haste/libraries/unordered-containers/Data/HashMap/: Lazy.hs
reactive-banana/: .gitignore  .hlint.yaml  CHANGELOG  CHANGELOG.md  LICENSE  Makefile  TODO.md  ghci  reactive-banana.cabal  stack.yaml
reactive-banana-gtk/: LICENSE  reactive-banana-gtk.cabal
reactive-banana-gtk/src/: Counter.hs  Matrix.hs  Nodes.hs
reactive-banana-gtk/src/Reactive/Banana/: GTK.hs
reactive-banana-ji/: LICENSE  reactive-banana-ji.cabal  run-CurrencyConverter.sh
reactive-banana-ji/src/: CurrencyConverter.hs
reactive-banana-ji/src/Reactive/Banana/: Ji.hs
reactive-banana-ji/wwwroot/: CurrencyConverter.html
reactive-banana-ji/wwwroot/js/: jquery.cookie.js  x.js
reactive-banana-threepenny/: reactive-banana-threepenny.cabal
reactive-banana-threepenny/src/: Animation.hs  Arithmetic.hs  Asteroids.hs  BarTab.hs  CRUD.hs  Counter.hs  CurrencyConverter.hs  NetMonitor.hs  Paths.hs  TicTacToe.hs  Tidings.hs  Timer.hs  TwoCounters.hs  Wave.hs
reactive-banana-threepenny/src/Reactive/Banana/: Threepenny.hs
reactive-banana-wx/: .gitignore  CHANGELOG.md  LICENSE  Makefile  Setup.hs  reactive-banana-wx.cabal  stack.yaml
reactive-banana-wx/src/: Animation.hs  Arithmetic.hs  Asteroids.hs  BarTab.hs  CRUD.hs  CRUDIncremental.hs  Counter.hs  CurrencyConverter.hs  NetMonitor.hs  Paths.hs  TicTacToe.hs  Tidings.hs  TwoCounters.hs  Wave.hs
reactive-banana-wx/src/Reactive/: WX.hs
reactive-banana-wx/src/Reactive/Banana/: WX.hs
reactive-banana/benchmark/: Main.hs
reactive-banana/doc/: snippets.md
reactive-banana/doc/design/: design.md
reactive-banana/doc/examples/: .gitignore  ActuatePause.hs  Counter.hs  LowerUpperSwitch.hs  Octave.hs  RunPause.hs  SlotMachine.hs  ghci
reactive-banana/doc/hal7/: Animation.hs  Beispiel1.hs  Beispiel2.hs  Beispiel3.hs
reactive-banana/doc/hcar/: .gitignore  hcar-2011-05.tex  hcar-2011-11.tex  hcar-2012-05.tex  hcar-2012-11.tex  reactivebanana-2011-05.tex  reactivebanana-2011-11.tex  reactivebanana-2012-05.tex  reactivebanana-2012-11.tex  reactivebanana-2013-05.tex  reactivebanana-2013-11.tex  reactivebanana-2014-11.tex  reactivebanana-2015-05.tex  reactivebanana-2015-11.tex  reactivebanana-2016-11.tex  reactivebanana-2017-05.tex  reactivebanana-2017-11.tex  template.tex
reactive-banana/leak-1/: Main.hs
reactive-banana/src/: PerformanceLog.md  Reactive.hs  done.md  examples.md  todo.md
reactive-banana/src/Control/Event/: Handler.hs
reactive-banana/src/Control/Monad/Trans/: RWSIO.hs  ReaderWriterIO.hs
reactive-banana/src/JS/Data/: HashSet.hs  Hashable.hs
reactive-banana/src/JS/Data/HashMap/: Lazy.hs
reactive-banana/src/Reactive/: Banana.hs  Classes.hs  Core.hs
reactive-banana/src/Reactive/Banana/: AddHandler.hs  Automaton.hs  Combinators.hs  Frameworks.hs  Implementation.hs  Incremental.hs  Input.hs  Model.hs  Prim.hs  PushIO.hs  Switch.hs  Test.hs  Tests.hs  TypedDict.hs  Types.hs  Vault.hs
reactive-banana/src/Reactive/Banana/Compat/Data/: HashSet.hs  Hashable.hs
reactive-banana/src/Reactive/Banana/Compat/Data/HashMap/: Lazy.hs
reactive-banana/src/Reactive/Banana/Experimental/: Calm.hs  Incremental.hs  Switch.hs
reactive-banana/src/Reactive/Banana/Frameworks/: AddHandler.hs
reactive-banana/src/Reactive/Banana/Internal/: AST.hs  Automaton.hs  Cached.hs  Combinators.hs  CompileModel.hs  DependencyGraph.hs  EventBehavior1.hs  Input.hs  InputOutput.hs  InterpretModel.hs  Model.hs  Phantom.hs  PrimTypes.hs  PullGraph.hs  PulseLatch.hs  PulseLatch0.hs  PushDriven.hs  PushGraph.hs  PushIO.hs  TotalOrder.hs  Types2.hs
reactive-banana/src/Reactive/Banana/Internal0/: Combinators.hs  DependencyGraph.hs  Evaluation.hs  IO.hs  Monads.hs  TotalOrder.hs  Types.hs
reactive-banana/src/Reactive/Banana/Internal1/: Cached.hs  Combinators.hs
reactive-banana/src/Reactive/Banana/Prim/: Cached.hs  Combinators.hs  Compile.hs  Dated.hs  Dependencies.hs  DependencyGraph.hs  Evaluation.hs  Global.hs  Graph.hs  IO.hs  Mid.hs  Monads.hs  Order.hs  OrderedBag.hs  Plumbing.hs  Test.hs  TotalOrder.hs  Types.hs  Util.hs
reactive-banana/src/Reactive/Banana/Prim/High/: Cached.hs  Combinators.hs
reactive-banana/src/Reactive/Banana/Prim/Low/: Compile.hs  Dependencies.hs  Evaluation.hs  Graph.hs  GraphGC.hs  GraphTraversal.hs  HasUnique.hs  IO.hs  OrderedBag.hs  Plumbing.hs  Ref.hs  Types.hs  UniqueMap.hs  UniqueSet.hs  Util.hs
reactive-banana/src/Reactive/Banana/Prim/LowNew/: Graph.hs  GraphGC.hs  GraphTraversal.hs  Ref.hs
reactive-banana/src/Reactive/Banana/Prim/Mid/: Combinators.hs  Compile.hs  Dependencies.hs  Evaluation.hs  IO.hs  Plumbing.hs  Test.hs  Types.hs
reactive-banana/src/Reactive/Banana/Test/: Execute.hs  Performance.hs  Plumbing.hs  SpaceLeaks.hs
reactive-banana/test/: space.hs
reactive-banana/test/Reactive/Banana/Test/High/: Plumbing.hs  Space.hs
reactive-banana/test/Reactive/Banana/Test/Low/: Gen.hs  Graph.hs  GraphGC.hs
reactive-banana/tests/: Main.hs  Plumbing.hs  reactive-banana-tests.hs  space.hs
reactive-banana/tests/Reactive/Banana/Test/High/: Combinators.hs  Plumbing.hs  Space.hs
reactive-banana/tests/Reactive/Banana/Test/Low/: Gen.hs  Graph.hs  GraphGC.hs
reactive-banana/tests/Reactive/Banana/Test/Mid/: Space.hs
src/: BlackBoard.hs  Controls.hs  Graphics.hs  Reactive.hs  TextBox.hs  ToolPickers.hs  todo.md
src/Graphics/: Events.hs  GUI.hs  Geometry.hs
src/Reactive/: Classes.hs  Core.hs  GraphicOpt.hs  Snippets.hs  WX.hs
