Name:                Blackboard
Version:             0.1
Synopsis:            Blackbaord is an application for drawing slides for
                     presentations.
-- Description:         
License:             BSD3
License-file:        LICENSE
Author:              Heinrich Apfelmus
Maintainer:          apfelmus at quantentunnel de
Category:            Graphics

Build-type:          Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:  

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.2


Executable Blackboard
  -- .hs or .lhs file containing the Main module.
  -- Main-is:             
  
  -- Packages needed in order to build this package.
  -- Build-depends:       
  
  -- Modules not exported by this package.
  -- Other-modules:       
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         
  