Name:                reactive-banana-ji
Version:             0.7.1.0
Synopsis:            Examples for the reactive-banana library, using ji.
Description:
    This library provides some GUI examples for the @reactive-banana@ library,
    using ji and the web browser.
Homepage:            http://haskell.org/haskellwiki/Reactive-banana
License:             BSD3
License-file:        LICENSE
Author:              Heinrich Apfelmus
Maintainer:          Heinrich Apfelmus <apfelmus quantentunnel de>
Category:            FRP, GUI
Cabal-version:       >=1.8


Build-type:          Simple
Extra-source-files:  Makefile

flag buildExamples
  description: Build example executables
  default:     True

Library
    hs-source-dirs:  src
    build-depends:   base >= 4.2 && < 5,
                     reactive-banana >= 0.7.1.0 && < 0.8,
                     ji == 0.1.*      
    extensions:      ExistentialQuantification
    exposed-modules: Reactive.Banana.Ji

Source-repository    head
    type:            git
    location:        git://github.com/HeinrichApfelmus/reactive-banana.git
    subdir:          reactive-banana-ji


Executable reactive-banana-ji-CurrencyConverter
    if flag(buildExamples)
        build-depends: reactive-banana, base, ji
    else
        buildable: False
    hs-source-dirs:  src
    main-is:         CurrencyConverter.hs
