Name:                reactive-banana-threepenny
Version:             0.7.1.3
Synopsis:            Examples for the reactive-banana library, using threepenny-gui.
Description:
    This library provides some GUI examples for the @reactive-banana@ library,
    using @threepenny-gui@.
    .
    .
    Note: This library contains examples, but they are not built by default.
    To build and install the example, use the @buildExamples@ flag like this
    .
    @cabal install reactive-banana-threepenny -fbuildExamples@
    .
    Stability forecast: The wrapper functions are rather provisional.

Homepage:            http://haskell.org/haskellwiki/Reactive-banana
License:             BSD3
License-file:        LICENSE
Author:              Heinrich Apfelmus
Maintainer:          Heinrich Apfelmus <apfelmus quantentunnel de>
Category:            FRP, GUI
Cabal-version:       >=1.8


Build-type:          Simple

data-dir:            data
data-files:          *.wav, *.png

flag buildExamples
  description: Build example executables
  default:     False

Library
    hs-source-dirs:  src
    build-depends:   base >= 4.2 && < 5,
                     reactive-banana >= 0.7.1.0 && < 0.8,
                     threepenny-gui == 0.2.*
    extensions:      ExistentialQuantification
    exposed-modules: Reactive.Banana.Threepenny

Source-repository    head
    type:            git
    location:        git://github.com/HeinrichApfelmus/reactive-banana.git
    subdir:          reactive-banana-threepenny

Executable reactiva-banana-threepenny-Animation
    if flag(buildExamples)
        build-depends:
            process >= 1.0 && < 1.2,
            random == 1.0.*,
            filepath >= 1.1 && <= 1.4,
            base, reactive-banana, threepenny-gui
        cpp-options: -DbuildExamples
    else
        buildable: False
    hs-source-dirs:  src
    other-modules:   Paths_reactive_banana_threepenny, Paths
    main-is:         Animation.hs

Executable reactiva-banana-threepenny-Arithmetic
    if flag(buildExamples)
        build-depends: base, reactive-banana, threepenny-gui
    else
        buildable: False
    hs-source-dirs:  src
    main-is:         Arithmetic.hs

Executable reactiva-banana-threepenny-Asteroids
    if flag(buildExamples)
        build-depends:
            random == 1.0.*,
            filepath >= 1.1 && <= 1.4,
            reactive-banana, threepenny-gui, base
        cpp-options: -DbuildExamples
    else
        buildable: False
    hs-source-dirs:  src
    other-modules:   Paths_reactive_banana_threepenny, Paths
    main-is:         Asteroids.hs

Executable reactiva-banana-threepenny-BarTab
    if flag(buildExamples)
        build-depends: reactive-banana, threepenny-gui, base
    else
        buildable: False
    hs-source-dirs:  src
    main-is:         BarTab.hs

Executable reactiva-banana-threepenny-Counter
    if flag(buildExamples)
        build-depends: reactive-banana, threepenny-gui, base
    else
        buildable: False
    hs-source-dirs:  src
    main-is:         Counter.hs

Executable reactiva-banana-threepenny-CurrencyConverter
    if flag(buildExamples)
        build-depends: reactive-banana, threepenny-gui, base
    else
        buildable: False
    hs-source-dirs:  src
    main-is:         CurrencyConverter.hs

Executable reactiva-banana-threepenny-CRUD
    if flag(buildExamples)
        build-depends: containers >= 0.4 && < 0.6,
                       reactive-banana, threepenny-gui, base
    else
        buildable: False
    hs-source-dirs:  src
    main-is:         CRUD.hs
    other-modules:   Tidings

Executable reactiva-banana-threepenny-NetMonitor
    if flag(buildExamples)
        build-depends: process >= 1.0 && < 1.2,
                       reactive-banana, threepenny-gui, base
    else
        buildable: False
    hs-source-dirs:  src
    main-is:         NetMonitor.hs

Executable reactiva-banana-threepenny-TicTacToe
    if flag(buildExamples)
        build-depends: array >= 0.3 && < 0.5,
                       filepath >= 1.1 && <= 1.4,
                       reactive-banana, threepenny-gui, base
        cpp-options: -DbuildExamples
    else
        buildable: False
    hs-source-dirs:  src
    other-modules:   Paths_reactive_banana_threepenny, Paths
    main-is:         TicTacToe.hs

Executable reactiva-banana-threepenny-TwoCounters
    if flag(buildExamples)
        build-depends: reactive-banana, threepenny-gui, base
    else
        buildable: False
    hs-source-dirs:  src
    main-is:         TwoCounters.hs

Executable reactiva-banana-threepenny-Wave
    if flag(buildExamples)
        build-depends: reactive-banana, threepenny-gui, base
    else
        buildable: False
    hs-source-dirs:  src
    main-is:         Wave.hs
