Name:                reactive-banana-wx
Version:             0.4.2.0
Synopsis:            Examples for the reactive-banana library, using wxHaskell.
Description:
    This library provides some GUI examples for the @reactive-banana@ library,
    using wxHaskell.
    .
    Note: You need to install the (platform independent)
    @cabal-macosx@ library before you can configure/build and install this library.

Homepage:            http://haskell.org/haskellwiki/Reactive-banana
License:             BSD3
License-file:        LICENSE
Author:              Heinrich Apfelmus
Maintainer:          Heinrich Apfelmus <apfelmus quantentunnel de>
Category:            FRP, GUI
Cabal-version:       >=1.6


Build-type:          Custom
Extra-source-files:  Makefile

data-dir:            data
data-files:          *.ico, *.wav

Library
    hs-source-dirs:  src
    build-depends:   base >= 4.3 && < 5,
                     cabal-macosx == 0.1.*,
                     reactive-banana >= 0.4.2.0 && < 0.5,
                     wx==0.12.*, wxcore==0.12.*
    extensions:      ExistentialQuantification
    exposed-modules: Reactive.Banana.WX

Source-repository    head
    type:            git
    location:        git://github.com/HeinrichApfelmus/reactive-banana.git
    subdir:          reactive-banana-wx

Executable Arithmetic
    hs-source-dirs:  src
    main-is:         Arithmetic.hs

Executable Asteroids
    hs-source-dirs:  src
    build-depends:   random == 1.0.*,
                     executable-path == 0.0.*, filepath == 1.2.*
    other-modules:   Paths_reactive_banana_wx
    main-is:         Asteroids.hs

Executable Counter
    hs-source-dirs:  src
    main-is:         Counter.hs

Executable CurrencyConverter
    hs-source-dirs:  src
    main-is:         CurrencyConverter.hs

Executable CRUD
    hs-source-dirs:  src
    build-depends:   containers == 0.4.*
    main-is:         CRUD.hs

Executable NetMonitor
    hs-source-dirs:  src
    build-depends:   process == 1.0.*
    main-is:         NetMonitor.hs

Executable TicTacToe
    hs-source-dirs:  src
    build-depends:   array == 0.3.*
    main-is:         TicTacToe.hs

Executable TwoCounters
    hs-source-dirs:  src
    main-is:         TwoCounters.hs

Executable Wave
    hs-source-dirs:  src
    main-is:         Wave.hs

