Name:                reactive-banana-wx
Version:             0.6.0.0
Synopsis:            Examples for the reactive-banana library, using wxHaskell.
Description:
    This library provides some GUI examples for the @reactive-banana@ library,
    using wxHaskell.
    .
    Note: You need to install the (platform independent)
    @cabal-macosx@ library before you can configure/build and install this library.
    .
    Note: This library contains examples, but they are not built by default.
    To build and install the example, use the @buildExamples@ flag like this
    .
    @cabal install reactive-banana-wx -fbuildExamples@
    .
    IMPORTANT NOTE:
    There are a few issues with WxWidgets 2.9.3 and some examples may crash.
    These problems are only solved in wx-0.90.0.1 and higher.
    .
    Stability forecast: The wrapper functions are rather provisional.

Homepage:            http://haskell.org/haskellwiki/Reactive-banana
License:             BSD3
License-file:        LICENSE
Author:              Heinrich Apfelmus
Maintainer:          Heinrich Apfelmus <apfelmus quantentunnel de>
Category:            FRP, GUI
Cabal-version:       >=1.8


Build-type:          Custom
Extra-source-files:  Makefile

data-dir:            data
data-files:          *.ico, *.wav, *.png

flag buildExamples
  description: Build example executables
  default:     False

Library
    hs-source-dirs:  src
    build-depends:   base >= 4.2 && < 5,
                     cabal-macosx >= 0.1 && < 0.3,
                     reactive-banana >= 0.6.0.0 && < 0.7,
                     wxcore (>= 0.13.2.3 && < 0.90) || (>= 0.90.0.1 && < 0.91),
                     wx (>= 0.13.2.3 && < 0.90) || (>= 0.90.0.1 && < 0.91)
    extensions:      ExistentialQuantification
    exposed-modules: Reactive.Banana.WX

Source-repository    head
    type:            git
    location:        git://github.com/HeinrichApfelmus/reactive-banana.git
    subdir:          reactive-banana-wx

Executable Animation
    if !flag(buildExamples)
        buildable: False
    else
        cpp-options: -DbuildExamples
    hs-source-dirs:  src
    other-modules:   Paths_reactive_banana_wx, Paths
    main-is:         Animation.hs

Executable Arithmetic
    if !flag(buildExamples)
        buildable: False
    hs-source-dirs:  src
    main-is:         Arithmetic.hs

Executable Asteroids
    if flag(buildExamples)
        build-depends:
            random == 1.0.*,
            executable-path == 0.0.*,
            filepath >= 1.1 && <= 1.4
        cpp-options: -DbuildExamples
    else
        buildable: False
    hs-source-dirs:  src
    other-modules:   Paths_reactive_banana_wx, Paths
    main-is:         Asteroids.hs

Executable Counter
    if !flag(buildExamples)
        buildable: False
    hs-source-dirs:  src
    main-is:         Counter.hs

Executable CurrencyConverter
    if flag(buildExamples)
        build-depends: process >= 1.0.1 && < 1.2
    else
        buildable: False
    hs-source-dirs:  src
    main-is:         CurrencyConverter.hs

Executable CRUD
    if flag(buildExamples)
        build-depends: containers >= 0.3 && < 0.6
    else
        buildable: False
    hs-source-dirs:  src
    main-is:         CRUD.hs

Executable NetMonitor
    if flag(buildExamples)
        build-depends: process >= 1.0 && < 1.2
    else
        buildable: False
    hs-source-dirs:  src
    main-is:         NetMonitor.hs

Executable TicTacToe
    if flag(buildExamples)
        build-depends: array >= 0.3 && < 0.5
    else
        buildable: False
    hs-source-dirs:  src
    main-is:         TicTacToe.hs

Executable TwoCounters
    if !flag(buildExamples)
        buildable: False
    hs-source-dirs:  src
    main-is:         TwoCounters.hs

Executable Wave
    if !flag(buildExamples)
        buildable: False
    hs-source-dirs:  src
    main-is:         Wave.hs
