Name:                reactive-banana
Version:             1.3.0.0
Synopsis:            Library for functional reactive programming (FRP).
Description:
    Reactive-banana is a library for Functional Reactive Programming (FRP).
    .
    FRP offers an elegant and concise way to express interactive programs such as graphical user interfaces, animations, computer music or robot controllers. It promises to avoid the spaghetti code that is all too common in traditional approaches to GUI programming.
    .
    See the project homepage <http://wiki.haskell.org/Reactive-banana>
    for more detailed documentation and examples.
    .
    /Stability forecast./
    This is a stable library, though minor API changes are still likely.
    It features an efficient, push-driven implementation
    and has seen some optimization work.
    .
    /API guide./
    Start with the "Reactive.Banana" module.

Homepage:            http://wiki.haskell.org/Reactive-banana
License:             BSD3
License-file:        LICENSE
Author:              Heinrich Apfelmus
Maintainer:          Heinrich Apfelmus <apfelmus quantentunnel de>
Category:            FRP
Cabal-version:       1.18
Build-type:          Simple
Tested-with:         GHC == 8.4.3, GHC == 8.6.1

extra-source-files:     CHANGELOG.md,
                        doc/examples/*.hs
extra-doc-files:        doc/*.png

Source-repository head
    type:               git
    location:           https://github.com/HeinrichApfelmus/reactive-banana
    subdir:             reactive-banana/

Library
    default-language:   Haskell98
    hs-source-dirs:     src

    build-depends:      base >= 4.2 && < 5,
                        semigroups >= 0.13 && < 0.21,
                        containers >= 0.5 && < 0.7,
                        transformers >= 0.2 && < 0.7,
                        vault == 0.3.*,
                        unordered-containers >= 0.2.1.0 && < 0.3,
                        hashable >= 1.1 && < 1.5,
                        pqueue >= 1.0 && < 1.5,
                        these >= 0.2 && < 1.2

    exposed-modules:
                        Control.Event.Handler,
                        Reactive.Banana,
                        Reactive.Banana.Combinators,
                        Reactive.Banana.Frameworks,
                        Reactive.Banana.Model,
                        Reactive.Banana.Prim.Mid,
                        Reactive.Banana.Prim.High.Cached

    other-modules:
                        Control.Monad.Trans.ReaderWriterIO,
                        Control.Monad.Trans.RWSIO,
                        Reactive.Banana.Prim.Low.Compile,
                        Reactive.Banana.Prim.Low.Dependencies,
                        Reactive.Banana.Prim.Low.Evaluation,
                        Reactive.Banana.Prim.Low.Graph,
                        Reactive.Banana.Prim.Low.IO,
                        Reactive.Banana.Prim.Low.OrderedBag,
                        Reactive.Banana.Prim.Low.Plumbing,
                        Reactive.Banana.Prim.Low.Types,
                        Reactive.Banana.Prim.Low.Util,
                        Reactive.Banana.Prim.Mid.Combinators,
                        Reactive.Banana.Prim.Mid.Test,
                        Reactive.Banana.Prim.High.Combinators,
                        Reactive.Banana.Types
    
    ghc-options: -Wall -Wcompat -Werror=incomplete-record-updates -Werror=incomplete-uni-patterns -Werror=missing-fields -Werror=partial-fields -Wno-name-shadowing

Test-Suite tests
    default-language:   Haskell98
    type:               exitcode-stdio-1.0
    hs-source-dirs:     tests
    main-is:            Main.hs
    other-modules:      Plumbing
    build-depends:      base >= 4.2 && < 5,
                        tasty,
                        tasty-hunit,
                        reactive-banana, vault, containers,
                        semigroups, transformers,
                        unordered-containers, hashable, psqueues, pqueue, these


Benchmark benchmark
  default-language:   Haskell2010
  type:          exitcode-stdio-1.0
  build-depends: base, tasty-bench, reactive-banana, containers, random, tasty
  hs-source-dirs: benchmark
  main-is: Main.hs
  ghc-options:  "-with-rtsopts=-A32m"
