name:               reactive-banana
version:            1.3.1.0
synopsis:           Library for functional reactive programming (FRP).
description:
  Reactive-banana is a library for Functional Reactive Programming (FRP).
  .
  FRP offers an elegant and concise way to express interactive programs such as graphical user interfaces, animations, computer music or robot controllers. It promises to avoid the spaghetti code that is all too common in traditional approaches to GUI programming.
  .
  See the project homepage <http://wiki.haskell.org/Reactive-banana>
  for more detailed documentation and examples.
  .
  /Stability forecast./
  This is a stable library, though minor API changes are still likely.
  It features an efficient, push-driven implementation
  and has seen some optimization work.
  .
  /API guide./
  Start with the "Reactive.Banana" module.

homepage:           http://wiki.haskell.org/Reactive-banana
license:            BSD3
license-file:       LICENSE
author:             Heinrich Apfelmus
maintainer:         Heinrich Apfelmus <apfelmus quantentunnel de>
category:           FRP
cabal-version:      1.18
build-type:         Simple
tested-with:        GHC ==8.4.3 || ==8.6.1
extra-source-files:
  CHANGELOG.md
  doc/examples/*.hs

extra-doc-files:    doc/*.png

source-repository head
  type:     git
  location: https://github.com/HeinrichApfelmus/reactive-banana
  subdir:   reactive-banana/

library
  default-language: Haskell98
  hs-source-dirs:   src
  build-depends:
      base                  >=4.2     && <5
    , containers            >=0.5     && <0.7
    , hashable              >=1.1     && <1.5
    , pqueue                >=1.0     && <1.5
    , semigroups            >=0.13    && <0.21
    , these                 >=0.2     && <1.2
    , transformers          >=0.2     && <0.7
    , unordered-containers  >=0.2.1.0 && <0.3
    , vault                 >=0.3     && <0.4
    , hs-opentelemetry-sdk

  exposed-modules:
    Control.Event.Handler
    Reactive.Banana
    Reactive.Banana.Combinators
    Reactive.Banana.Frameworks
    Reactive.Banana.Model
    Reactive.Banana.Prim.High.Cached
    Reactive.Banana.Prim.Mid

  other-modules:
    Control.Monad.Trans.ReaderWriterIO
    Control.Monad.Trans.RWSIO
    Reactive.Banana.Prim.High.Combinators
    Reactive.Banana.Prim.Low.Compile
    Reactive.Banana.Prim.Low.Dependencies
    Reactive.Banana.Prim.Low.Evaluation
    Reactive.Banana.Prim.Low.Graph
    Reactive.Banana.Prim.Low.IO
    Reactive.Banana.Prim.Low.OrderedBag
    Reactive.Banana.Prim.Low.Plumbing
    Reactive.Banana.Prim.Low.Types
    Reactive.Banana.Prim.Low.Util
    Reactive.Banana.Prim.Mid.Combinators
    Reactive.Banana.Prim.Mid.Test
    Reactive.Banana.Types

  ghc-options:
    -Wall -Wcompat -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns -Werror=missing-fields
    -Werror=partial-fields -Wno-name-shadowing

test-suite tests
  default-language: Haskell98
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          Main.hs
  other-modules:    Plumbing
  build-depends:
      base                  >=4.2 && <5
    , containers
    , hashable
    , pqueue
    , psqueues
    , reactive-banana
    , semigroups
    , tasty
    , tasty-hunit
    , these
    , transformers
    , unordered-containers
    , vault

benchmark benchmark
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  build-depends:
      base
    , containers
    , random
    , reactive-banana
    , tasty
    , tasty-bench

  hs-source-dirs:   benchmark
  main-is:          Main.hs
  ghc-options:      -with-rtsopts=-A32m
